add: jquery and basic stylesheet

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<title>The Man Under The Tree</title>
-		<script> src="jquery"></script>
+		<link href="style.css" rel="stylesheet" type="text/css"/>
+		<script src="lib/jquery.js"></script>
 	</head>
 	<body>
 		<h1>The Parable of the Man Under The Tree</h1>
 		<div>
 			<p>There once was a man known for being able to solve any problem brought to him. People would come from thousands of miles to see this famous man, visiting him at the tree he lived under.</p>
-			<img>man under a tree</img>
+			<img>man under a tree image</img>
 		</div>
 		<div>
 			<p>This man didn't listen when someone told him a problem -- he didn't have time for that.</p>
@@ -19,7 +20,7 @@
 		<div>
 			<form id="userHandkerchief">
 				<textarea></textarea>
-				<input type="submit">I'm Done</input>
+				<input type="submit" value="I'm Done"></input>
 			</form>
 		</div>
 		<div>
