add: paging system

--- a/index.html
+++ b/index.html
@@ -4,45 +4,46 @@
     <title>The Man Under The Tree</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <script src="lib/jquery.js"></script>
+    <script src="behavior.js"></script>
   </head>
   <body>
     <h1>The Parable of the Man Under The Tree</h1>
-    <div>
+    <section>
       <p>There once was a man known for being able to solve any problem brought to him. People would come from thousands of miles to see this famous man, visiting him at the tree he lived under.</p>
       <img>man under a tree image</img>
-    </div>
-    <div>
+    </section>
+    <section>
       <p>Now, this man didn't listen when someone told him a problem -- he didn't have time for that.</p>
       <p>Instead, he would ask his visitors to write down their problems on a white handkerchief.</p>
       <p>They would write and write, fitting in endless details about the problem they faced.</p>
       <button onClick="nextPage">Would you like to try?</button>
-    </div>
-    <div>
+    </section>
+    <section>
       <form id="userHandkerchief">
         <textarea></textarea>
         <input type="submit" value="I'm Done"></input>
       </form>
-    </div>
-    <div>
+    </section>
+    <section>
       <p>When they were finished, they would bring the handkerchief back to the man.</p>
       <p>The man would instruct them to find an open spot on the tree, and to tie their handkerchief onto a branch.</p>
       <img>picture of a the tree, with lots of handkerchiefs already tied on</img>
-      <script>$(".openBranch").click(nextPage);</script>
-    </div>
-    <div>
+      <p>(find an open spot to continue)</p>
+    </section>
+    <section>
       <p>Then he would say: "Did you know I have a miraculous power? I can switch the problems between two people. Would you like that?"</p>
       <p>If they agreed, he'd instruct them: "Go examine the other handkerchiefs and return with one you would like."</p>
       <p>They'd climb the tree and see:</p>
       <p>"I've lost a child."</p>
       <p>"I'm sick."</p>
       <p>"I've lost a parent."</p>
-    </div>
-    <div>
+    </section>
+    <section>
       <p>Then they would say, "Ah. Now I see."</p>
-    </div>
-    <div>
+    </section>
+    <section>
       <p>You can learn more about this story from this TEDx presentation:</p>
       <embed src="https://www.youtube.com/watch?v=BinLZbSBSkE"></embed>
-    </div>
+    </section>
   </body>
 </html>
