fix: buttons to get to next page

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <section>
       <p>There once was a man known for being able to solve any problem brought to him. People would come from thousands of miles to see this famous man, visiting him at the tree he lived under.</p>
       <img>man under a tree image</img>
+      <button onClick="nextPage()">Tell me more...</button>
     </section>
     <section>
       <p>Now, this man didn't listen when someone told him a problem -- he didn't have time for that.</p>
       <p>Instead, he would ask his visitors to write down their problems on a white handkerchief.</p>
       <p>They would write and write, fitting in endless details about the problem they faced.</p>
-      <button onClick="nextPage">Would you like to try?</button>
+      <button onClick="nextPage()">Would you like to try?</button>
     </section>
     <section>
       <form id="userHandkerchief">
@@ -29,6 +30,7 @@
       <p>The man would instruct them to find an open spot on the tree, and to tie their handkerchief onto a branch.</p>
       <img>picture of a the tree, with lots of handkerchiefs already tied on</img>
       <p>(find an open spot to continue)</p>
+      <button onClick="nextPage()">Tell me more...</button>
     </section>
     <section>
       <p>Then he would say: "Did you know I have a miraculous power? I can switch the problems between two people. Would you like that?"</p>
@@ -37,9 +39,11 @@
       <p>"I've lost a child."</p>
       <p>"I'm sick."</p>
       <p>"I've lost a parent."</p>
+      <button onClick="nextPage()">I get it.</button>
     </section>
     <section>
       <p>Then they would say, "Ah. Now I see."</p>
+      <button onClick="nextPage()">Finish</button>
     </section>
     <section>
       <p>You can learn more about this story from this TEDx presentation:</p>
