add: youtube embed of story

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
     <section>
       <p>You can learn more about this story from this TEDx presentation:</p>
-      <embed src="https://www.youtube.com/watch?v=BinLZbSBSkE"></embed>
+      <iframe class="youtube_embed" width="560" height="315" src="https://www.youtube.com/embed/BinLZbSBSkE?start=554" frameborder="0" allowfullscreen></iframe>
     </section>
   </body>
 </html>
